--- a/appspec.yml
+++ b/appspec.yml
@@ -11,3 +11,7 @@ hooks:
     - location: scripts/start_server
       timeout: 300
       runas: root
+  AfterInstall:
+    - location: scripts/restart_server
+      timeout: 300
+      runas: root
